--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,14 +20,14 @@
         <input type="text" placeholder="Search.." />
     </nav>
     <h1>Login</h1>
-    <form style="width: 380px; height: 400px;">
+    <form th:action="@{/login}" method="post" style="width: 380px; height: 400px;">
         <input type="email" id="username" name="username" placeholder="Enter your Email" required
         	pattern="(\w\.?)+@[\w\.-]+\.\w{2,}" /><br/>
         <input type="password" id="password" name="password" placeholder="Enter your Password" required
         	minlength="8" maxlength="15" /><br/>
         <input type="submit" value="LOGIN" /><br/><br/>
         <p style="margin-bottom: 5px; font-weight: 500">If you don't have your own station</p>
-        <p style="margin: 0 0 5px 0; font-weight: 500"><a href="registration.html" style="color: black; font-weight: 600">click here</a></p>
+        <p style="margin: 0 0 5px 0; font-weight: 500"><a th:href="@{/registration}" style="color: black; font-weight: 600">click here</a></p>
         <p style="margin-top: 0; font-weight: 500">to go to Registration page.</p>
     </form>
     <footer>
