--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -34,18 +34,18 @@
                 <input type="text" th:field="*{lastName}" placeholder="Enter your Last Name" required
                     pattern="[a-zA-Z]{1, 20}" /><br/>
                 <label>Date of Birth:</label>
-                <input type="date" id="dob" th:field="*{dob}" required /><br/>
+                <input type="date" id="dob" th:field="*{dob}" required onchange="formatDate()"/><br/>
                 <input type="text" th:field="*{address}" placeholder="Enter your Address" required
                     pattern="[a-zA-Z0-9-]{1, 50}" />
             </div>
             <div class="column">
-                <input type="text" name="zipcode" th:field="*{zipCode}" placeholder="Enter your ZIP Code" required pattern="[0-9]{5}" /><br/>
+                <input type="text" id="zipcode" th:field="*{zipCode}" placeholder="Enter your ZIP Code" required pattern="[0-9]{5}" /><br/>
                 <input type="tel" th:field="*{phone}" placeholder="Enter your Phone Number" required pattern="[0-9]{10}" /><br/>
                 <input type="email" th:field="*{email}" placeholder="Enter your Email" required
                     pattern="(\w\.?)+@[\w\.-]+\.\w{2,}" /><br/>
                 <input type="password" th:field="*{password}" placeholder="Enter your Password" required minlength="8" maxlength="15" /><br/>
-                <input type="submit" value="SUBMIT" onclick="formatDate()" />
-                
+                <input type="submit" value="SUBMIT" />
+                <!-- onchange="checkZipCode()" -->
             </div>
         </form>
         <footer>
